--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.123.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-budgets": "^1.123.0",
+    "@aws-cdk/aws-iam": "^1.123.0",
+    "@aws-cdk/aws-lambda": "^1.123.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.123.0",
+    "@aws-cdk/aws-sns": "^1.123.0",
+    "@aws-cdk/aws-sqs": "^1.123.0",
     "@aws-cdk/core": "1.123.0",
     "source-map-support": "^0.5.16"
   }
